IDEADEV-19567